--- a/notebooks/01_fetch_api_data.ipynb
+++ b/notebooks/01_fetch_api_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a900008e",
    "metadata": {},
    "outputs": [
@@ -109,8 +109,6 @@
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "\n",
-    "# Load all raw datasets\n",
     "path = \"../data/raw/\"\n",
     "\n",
     "df_life = pd.read_csv(path + \"life_expectancy.csv\")\n",
@@ -123,9 +121,7 @@
     "if os.path.exists(obesity_file):\n",
     "\tdf_obesity = pd.read_csv(obesity_file)\n",
     "else:\n",
-    "\tdf_obesity = pd.DataFrame()  # empty DataFrame if file not found\n",
-    "\n",
-    "# Check sample\n",
+    "\tdf_obesity = pd.DataFrame()\n",
     "df_life.head()\n"
    ]
   }
